deployment.yaml
apiVersion: apps.openshift.io/v1
kind: DeploymentConfig
metadata:
  name: deployment-1
spec:
  replicas: 1
  selector:
    app: myapp
  strategy:
    type: Rolling
  template:
    metadata:
      labels:
        app: myapp
    spec:
      containers:
        - name: myapp-container
          image: sowri13/webserver:v10
          ports:
            - containerPort: 5000
