service.yaml
apiVersion: v1
kind: Service
metadata:
  name: service-1
spec:
  selector:
    app: myapp
  ports:
  - protocol: TCP
    port: 8080
    targetPort: 8080
