route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: myapp-route
spec:
  to:
    kind: Service
    name: service-1
  port:
    targetPort: 80
  tls:
    termination: edge
  wildcardPolicy: None
